--- a/NetflixClient/package.json
+++ b/NetflixClient/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.2.1",
     "axios": "^0.27.2",
     "expo": "^46.0.9",
+    "expo-av": "~12.0.4",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
