--- a/NetflixClient/package.json
+++ b/NetflixClient/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "0.2.7",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
@@ -18,6 +19,8 @@
     "axios": "^0.27.2",
     "expo": "^46.0.9",
     "expo-av": "~12.0.4",
+    "expo-device": "~4.3.0",
+    "expo-notifications": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
