--- a/NetflixClient/package.json
+++ b/NetflixClient/package.json
@@ -20,6 +20,8 @@
     "expo": "^46.0.9",
     "expo-av": "~12.0.4",
     "expo-device": "~4.3.0",
+    "expo-document-picker": "~10.3.0",
+    "expo-file-system": "~14.1.0",
     "expo-notifications": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
