--- a/NetflixServer/package.json
+++ b/NetflixServer/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
+    "aws-sdk": "^2.1353.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.0.0"
   }
 }
