--- a/NetflixServer/package.json
+++ b/NetflixServer/package.json
@@ -6,8 +6,10 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^6.5.4",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^2.0.0"
+    "multer-s3": "^2.0.0",
+    "request-promise": "^4.2.6"
   }
 }
