--- a/NetflixClient/app.json
+++ b/NetflixClient/app.json
@@ -23,7 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#000000"
-      }
+      },
+      "package": "com.streamingo.test"
     },
     "web": {
       "favicon": "./assets/favicon.png"
